--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@ document.images[imageID].src = eval(objectName + ".src");
 			 <P ALIGN="center"><A HREF="https://www.disneyplus.com"
 				ONMOUSEOVER="return MouseOver('disney','down_disney')"
 				ONMOUSEOUT="MouseOut('disney','up_disney')"><IMG BORDER="0" WIDTH="125"
-				SRC="buttons/up/disney.gif" NAME=disney" HEIGHT="74"></A></P>				 
+				SRC="buttons/up/disney.gif" NAME="disney" HEIGHT="74"></A></P>				 
 			 <P ALIGN="center"><A HREF="http://www.netflix.com"
 				ONMOUSEOVER="return MouseOver('netflix','down_netflix')"
 				ONMOUSEOUT="MouseOut('netflix','up_netflix')"><IMG BORDER="0" WIDTH="125"
