--- a/index.html
+++ b/index.html
@@ -560,15 +560,7 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('abbey','down_abbey')"
 				ONMOUSEOUT="MouseOut('abbey','up_abbey')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="39" SRC="buttons/up/abbey.gif" ALT="Santander e-banking"
-				NAME="abbey"></A></P>
-			 <P ALIGN="center"><A HREF="http://www.bobdylan.com/"
-				ONMOUSEOVER="return MouseOver('dylan','down_dylan')"
-				ONMOUSEOUT="MouseOut('dylan','up_dylan')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="28" SRC="buttons/up/dylan.gif" NAME="dylan"></A></P> 
-			 <P ALIGN="center"><A HREF="http://www.hmhb.co.uk/"
-				ONMOUSEOVER="return MouseOver('hmhb','down_hmhb')"
-				ONMOUSEOUT="MouseOut('hmhb','up_hmhb')"><IMG BORDER="0" WIDTH="125" HEIGHT="60"
-				SRC="buttons/up/hmhb.gif" NAME="hmhb"></A></P></TD> 
+				NAME="abbey"></A></P></TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
 			 <P ALIGN="center"><A HREF="http://www.amazon.co.uk/"
 				ONMOUSEOVER="return MouseOver('amazon','down_amazon')"
@@ -638,7 +630,15 @@ document.images[imageID].src = eval(objectName + ".src");
 			 <P ALIGN="center"><A HREF="http://www.twitter.com"
 				ONMOUSEOVER="return MouseOver('twitter','down_twitter')"
 				ONMOUSEOUT="MouseOut('twitter','up_twitter')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="33" SRC="buttons/up/twitter.gif" NAME="twitter"></A></P> </TD> 
+				HEIGHT="33" SRC="buttons/up/twitter.gif" NAME="twitter"></A></P>
+			 <P ALIGN="center"><A HREF="http://www.bobdylan.com/"
+				ONMOUSEOVER="return MouseOver('dylan','down_dylan')"
+				ONMOUSEOUT="MouseOut('dylan','up_dylan')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="28" SRC="buttons/up/dylan.gif" NAME="dylan"></A></P> 
+			 <P ALIGN="center"><A HREF="http://www.hmhb.co.uk/"
+				ONMOUSEOVER="return MouseOver('hmhb','down_hmhb')"
+				ONMOUSEOUT="MouseOut('hmhb','up_hmhb')"><IMG BORDER="0" WIDTH="125" HEIGHT="60"
+				SRC="buttons/up/hmhb.gif" NAME="hmhb"></A></P></TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
 			 <P ALIGN="CENTER"><A HREF="http://mail.google.com/"
 				ONMOUSEOVER="return MouseOver('gmail','down_gmail')"
