--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ up_nationwide.src="buttons/up/nationwide.gif";
 down_nationwide=new Image();
 down_nationwide.src="buttons/down/nationwide.gif";
 
-up_bbc=new Image();
-up_bbc.src="buttons/up/bbc.gif";
-down_bbc=new Image();
-down_bbc.src="buttons/down/bbc.gif";
+up_solver=new Image();
+up_solver.src="buttons/up/solver.gif";
+down_solver=new Image();
+down_solver.src="buttons/down/solver.gif";
 
 up_iso=new Image();
 up_iso.src="buttons/up/iso.gif";
@@ -407,10 +407,6 @@ document.images[imageID].src = eval(objectName + ".src");
 	 <TABLE BORDERCOLOR="#222222" WIDTH="100%" BGCOLOR="#222222"> 
 		<TR VALIGN="TOP"> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
-			 <P ALIGN="center"><A HREF="http://www.bbc.co.uk/"
-				ONMOUSEOVER="return MouseOver('bbc','down_bbc')"
-				ONMOUSEOUT="MouseOut('bbc','up_bbc')"><IMG HEIGHT="46"
-				SRC="buttons/up/bbc.gif" WIDTH="125" BORDER="0" NAME="bbc"></A></P> 
 			 <P ALIGN="center"><A HREF="http://news.bbc.co.uk/"
 				ONMOUSEOVER="return MouseOver('bbcnews','down_bbcnews')"
 				ONMOUSEOUT="MouseOut('bbcnews','up_bbcnews')"><IMG HEIGHT="52"
@@ -446,7 +442,11 @@ document.images[imageID].src = eval(objectName + ".src");
 			 <P ALIGN="center"><A HREF="http://fifteensquared.net/"
 				ONMOUSEOVER="return MouseOver('fifteen','down_fifteen')"
 				ONMOUSEOUT="MouseOut('fifteen','up_fifteen')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="36" SRC="buttons/up/fifteen.gif" NAME="fifteen"></A></P> </TD> 
+				HEIGHT="36" SRC="buttons/up/fifteen.gif" NAME="fifteen"></A></P>				 
+			 <P ALIGN="center"><A HREF="https://www.crosswordsolver.org/forum/"
+				ONMOUSEOVER="return MouseOver('solver','down_solver')"
+				ONMOUSEOUT="MouseOut('solver','up_solver')"><IMG HEIGHT="46"
+				SRC="buttons/up/solver.gif" WIDTH="125" BORDER="0" NAME="solver"></A></P> </TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
 			 <P ALIGN="center"><A HREF="http://www.bikeradar.com"
 				ONMOUSEOVER="return MouseOver('bikeradar','down_bikeradar')"
