--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@ down_vmedia=new Image();
 down_vmedia.src="buttons/down/vmedia.gif";
 
 up_parkrun=new Image();
-up_parkrun.src="buttons/up/parkrun-up.gif";
+up_parkrun.src="buttons/up/parkrun.gif";
 down_parkrun=new Image();
-down_parkrun.src="buttons/down/parkrun-down.gif";
+down_parkrun.src="buttons/down/parkrun.gif";
 
 up_evans=new Image();
 up_evans.src="buttons/up/evans.gif";
@@ -464,16 +464,16 @@ document.images[imageID].src = eval(objectName + ".src");
 			 <P ALIGN="center"><A HREF="http://www.espncricinfo.com/"
 				ONMOUSEOVER="return MouseOver('cricinfo','down_cricinfo')"
 				ONMOUSEOUT="MouseOut('cricinfo','up_cricinfo')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="33" SRC="buttons/up/cricinfo.gif" NAME="cricinfo"></A></P> 
+				HEIGHT="38" SRC="buttons/up/cricinfo.gif" NAME="cricinfo"></A></P> 
 			 <P ALIGN="center"><A HREF="http://www.evanscycles.com/"
 				ONMOUSEOVER="return MouseOver('evans','down_evans')"
 				ONMOUSEOUT="MouseOut('evans','up_evans')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="40" SRC="buttons/up/evans.gif" NAME="evans"></A></P> 
+				HEIGHT="38" SRC="buttons/up/evans.gif" NAME="evans"></A></P> 
 			 <P ALIGN="center"><A HREF="https://www.parkrun.org.uk/bushy/parkrunner/7108395/"
 				ONMOUSEOVER="return MouseOver('parkrun','down_parkrun')"
 				ONMOUSEOUT="MouseOut('parkrun','up_parkrun')"><IMG
-				BORDER="0" WIDTH="125" SRC="buttons/up/parkrun-up.gif" NAME="parkrun"
-				HEIGHT="62"></A></P> 
+				BORDER="0" WIDTH="125" SRC="buttons/up/parkrun.gif" NAME="parkrun"
+				HEIGHT="38"></A></P> 
 			 <P ALIGN="center"><A HREF="http://www.sports-tracker.com/dashboard"
 				ONMOUSEOVER="return MouseOver('sportstracker','down_sportstracker')"
 				ONMOUSEOUT="MouseOut('sportstracker','up_sportstracker')"><IMG
