--- a/bwindex.html
+++ b/bwindex.html
@@ -369,11 +369,6 @@ up_wiki.src="buttons/up/bw/wiki.gif";
 down_wiki=new Image();
 down_wiki.src="buttons/down/wiki.gif";
 
-up_direnq=new Image();
-up_direnq.src="buttons/up/bw/direnq.gif";
-down_direnq=new Image();
-down_direnq.src="buttons/down/direnq.gif";
-
 up_google=new Image();
 up_google.src="buttons/up/bw/google.gif";
 down_google=new Image();
@@ -518,11 +513,7 @@ document.images[imageID].src = eval(objectName + ".src");
 			<P ALIGN="center"><A HREF="http://www.onelook.com/"
 				ONMOUSEOVER="return MouseOver('onelook','down_onelook')"
 				ONMOUSEOUT="MouseOut('onelook','up_onelook')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="33" SRC="buttons/up/bw/onelook.gif" NAME="onelook"></A></P>
-			 <P ALIGN="center"><A HREF="http://www.thephonebook.bt.com/"
-				ONMOUSEOVER="return MouseOver('direnq','down_direnq')"
-				ONMOUSEOUT="MouseOut('direnq','up_direnq')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="53" SRC="buttons/up/bw/direnq.gif" NAME="direnq"></A></P> </TD> 
+				HEIGHT="38" SRC="buttons/up/bw/onelook.gif" NAME="onelook"></A></P></TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
 			 <P ALIGN="center"><A
 				HREF="https://login.iso.org/portal/"
@@ -544,21 +535,21 @@ document.images[imageID].src = eval(objectName + ".src");
 				HEIGHT="38" SRC="buttons/up/bw/amex.gif" NAME="amex"></A></P> 
 			 <P ALIGN="center"><A HREF="https://www.mbna.co.uk/managing-your-account/"
 				ONMOUSEOVER="return MouseOver('mbna','down_mbna')"
-				ONMOUSEOUT="MouseOut('mbna','up_mbna')"><IMG BORDER="0" WIDTH="125" HEIGHT="44"
+				ONMOUSEOUT="MouseOut('mbna','up_mbna')"><IMG BORDER="0" WIDTH="125" HEIGHT="38"
 				SRC="buttons/up/bw/mbna.gif" NAME="mbna"></A></P> 
 			 <P ALIGN="center"><A HREF="https://onlinebanking.nationwide.co.uk/AccessManagement/Login"
 				ONMOUSEOVER="return MouseOver('nationwide','down_nationwide')"
-				ONMOUSEOUT="MouseOut('nationwide','up_nationwide')"><IMG BORDER="0" WIDTH="125" HEIGHT="32"
+				ONMOUSEOUT="MouseOut('nationwide','up_nationwide')"><IMG BORDER="0" WIDTH="125" HEIGHT="38"
 				SRC="buttons/up/bw/nationwide.gif" NAME="nationwide"></A></P> 
 			 <P ALIGN="center"><A HREF="https://www.rbs.co.uk/cardservices/cctab"
 				ONMOUSEOVER="return MouseOver('rbs','down_rbs')"
-				ONMOUSEOUT="MouseOut('rbs','up_rbs')"><IMG BORDER="0" WIDTH="125" HEIGHT="60"
+				ONMOUSEOUT="MouseOut('rbs','up_rbs')"><IMG BORDER="0" WIDTH="125" HEIGHT="38"
 				SRC="buttons/up/bw/rbs.gif" NAME="rbs"></A></P> 
 			 <P ALIGN="center"><A
 				HREF="https://retail.santander.co.uk/LOGSUK_NS_ENS/BtoChannelDriver.ssobto?dse_operationName=LOGON"
 				ONMOUSEOVER="return MouseOver('abbey','down_abbey')"
 				ONMOUSEOUT="MouseOut('abbey','up_abbey')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="24" SRC="buttons/up/bw/abbey.gif" ALT="Santander e-banking"
+				HEIGHT="38" SRC="buttons/up/bw/abbey.gif" ALT="Santander e-banking"
 				NAME="abbey"></A></P></TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
 			 <P ALIGN="center"><A HREF="http://www.amazon.co.uk/"
