--- a/index.html
+++ b/index.html
@@ -49,11 +49,6 @@ up_iso.src="buttons/up/iso.gif";
 down_iso=new Image();
 down_iso.src="buttons/down/iso.gif";
 
-up_vmedia=new Image();
-up_vmedia.src="buttons/up/vmedia.gif";
-down_vmedia=new Image();
-down_vmedia.src="buttons/down/vmedia.gif";
-
 up_parkrun=new Image();
 up_parkrun.src="buttons/up/parkrun.gif";
 down_parkrun=new Image();
@@ -249,11 +244,6 @@ up_abbey.src="buttons/up/abbey.gif";
 down_abbey=new Image();
 down_abbey.src="buttons/down/abbey.gif";
 
-up_abelcole=new Image();
-up_abelcole.src="buttons/up/abelcole.gif";
-down_abelcole=new Image();
-down_abelcole.src="buttons/down/abelcole.gif";
-
 up_amazon=new Image();
 up_amazon.src="buttons/up/amazon.gif";
 down_amazon=new Image();
@@ -278,16 +268,6 @@ up_ba=new Image();
 up_ba.src="buttons/up/ba.gif";
 down_ba=new Image();
 down_ba.src="buttons/down/ba.gif";
-
-up_fhm=new Image();
-up_fhm.src="buttons/up/fhm.gif";
-down_fhm=new Image();
-down_fhm.src="buttons/down/fhm.gif";
-
-up_friends=new Image();
-up_friends.src="buttons/up/friends.gif";
-down_friends=new Image();
-down_friends.src="buttons/down/friends.gif";
 
 up_wiggle=new Image();
 up_wiggle.src="buttons/up/wiggle.gif";
@@ -329,25 +309,15 @@ up_results.src="buttons/up/lottery.gif";
 down_results=new Image();
 down_results.src="buttons/down/lottery.gif";
 
-up_twitter=new Image();
-up_twitter.src="buttons/up/twitter.gif";
-down_twitter=new Image();
-down_twitter.src="buttons/down/twitter.gif";
-
-up_tesco=new Image();
-up_tesco.src="buttons/up/tesco.gif";
-down_tesco=new Image();
-down_tesco.src="buttons/down/tesco.gif";
+up_threads=new Image();
+up_threads.src="buttons/up/threads.gif";
+down_threads=new Image();
+down_threads.src="buttons/down/threads.gif";
 
 up_npl=new Image();
 up_npl.src="buttons/up/npl.gif";
 down_npl=new Image();
 down_npl.src="buttons/down/npl.gif";
-
-up_nplintra=new Image();
-up_nplintra.src="buttons/up/nplintra.gif";
-down_nplintra=new Image();
-down_nplintra.src="buttons/down/nplintra.gif";
 
 up_nplmail=new Image();
 up_nplmail.src="buttons/up/nplmail.gif";
@@ -604,14 +574,14 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('reddit','down_reddit')"
 				ONMOUSEOUT="MouseOut('reddit','up_reddit')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="38" SRC="buttons/up/reddit.gif" NAME="reddit"></A></P> 
+			 <P ALIGN="center"><A HREF="http://www.threads.net"
+				ONMOUSEOVER="return MouseOver('threads','down_threads')"
+				ONMOUSEOUT="MouseOut('threads','up_threads')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="38" SRC="buttons/up/threads.gif" NAME="threads"></A></P>
 			 <P ALIGN="center"><A HREF="http://www.tumblr.com/dashboard"
 				ONMOUSEOVER="return MouseOver('tumblr','down_tumblr')"
 				ONMOUSEOUT="MouseOut('tumblr','up_tumblr')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="37" SRC="buttons/up/tumblr.gif" NAME="tumblr"></A></P> 
-			 <P ALIGN="center"><A HREF="http://www.twitter.com"
-				ONMOUSEOVER="return MouseOver('twitter','down_twitter')"
-				ONMOUSEOUT="MouseOut('twitter','up_twitter')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="33" SRC="buttons/up/twitter.gif" NAME="twitter"></A></P>
+				HEIGHT="38" SRC="buttons/up/tumblr.gif" NAME="tumblr"></A></P> 
 			 <P ALIGN="center"><A HREF="http://www.bobdylan.com/"
 				ONMOUSEOVER="return MouseOver('dylan','down_dylan')"
 				ONMOUSEOUT="MouseOut('dylan','up_dylan')"><IMG BORDER="0" WIDTH="125"
@@ -636,10 +606,6 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOUT="MouseOut('webmail','up_webmail')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="44" SRC="buttons/up/webmail.gif" NAME="webmail"
 				ALT="Webmail from Virgin media"></A></P> 
-			 <P ALIGN="center"><A HREF="http://www.virginmedia.com/"
-				ONMOUSEOVER="return MouseOver('vmedia','down_vmedia')"
-				ONMOUSEOUT="MouseOut('vmedia','up_vmedia')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="79" SRC="buttons/up/vmedia.gif" NAME="vmedia"></A></P> 
 			 <P ALIGN="center"><A HREF="https://www.disneyplus.com"
 				ONMOUSEOVER="return MouseOver('disney','down_disney')"
 				ONMOUSEOUT="MouseOut('disney','up_disney')"><IMG BORDER="0" WIDTH="125"
