NPL email button change

--- a/index.html
+++ b/index.html
@@ -399,18 +399,7 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('priveye','down_priveye')"
 				ONMOUSEOUT="MouseOut('priveye','up_priveye')"><IMG HEIGHT="38"
 				SRC="buttons/up/priveye.gif" WIDTH="125" BORDER="0" NAME="priveye"></A></P> 
-			 <P ALIGN="center"><A HREF="http://www.theguardian.com/crosswords"
-				ONMOUSEOVER="return MouseOver('xwords','down_xwords')"
-				ONMOUSEOUT="MouseOut('xwords','up_xwords')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="60" SRC="buttons/up/xwords.gif" NAME="xwords"></A></P> 
-			 <P ALIGN="center"><A HREF="http://fifteensquared.net/"
-				ONMOUSEOVER="return MouseOver('fifteen','down_fifteen')"
-				ONMOUSEOUT="MouseOut('fifteen','up_fifteen')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="38" SRC="buttons/up/fifteen.gif" NAME="fifteen"></A></P>				 
-			 <P ALIGN="center"><A HREF="https://www.crosswordsolver.org/forum/"
-				ONMOUSEOVER="return MouseOver('solver','down_solver')"
-				ONMOUSEOUT="MouseOut('solver','up_solver')"><IMG HEIGHT="38"
-				SRC="buttons/up/solver.gif" WIDTH="125" BORDER="0" NAME="solver"></A></P> </TD> 
+</TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
 			 <P ALIGN="center"><A HREF="http://www.bikeradar.com"
 				ONMOUSEOVER="return MouseOver('bikeradar','down_bikeradar')"
@@ -493,6 +482,11 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('npl','down_npl')"
 				ONMOUSEOUT="MouseOut('npl','up_npl')"><IMG BORDER="0" WIDTH="125" HEIGHT="38"
 				SRC="buttons/up/npl.gif" NAME="npl"></A></P> 
+			 <P ALIGN="center"><A HREF="https://outlook.office365.com"
+				ONMOUSEOVER="return MouseOver('nplmail','down_nplmail')"
+				ONMOUSEOUT="MouseOut('nplmail','up_nplmail')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="38" SRC="buttons/up/nplmail.gif" NAME="nplmail"
+				ALT="To access NPL e-mail"></A></P> 
 			 <P ALIGN="center"><A HREF="work.html"
 				ONMOUSEOVER="return MouseOver('links','down_links')"
 				ONMOUSEOUT="MouseOut('links','up_links')"><IMG BORDER="0" WIDTH="125"
@@ -595,11 +589,6 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOUT="MouseOut('hmhb','up_hmhb')"><IMG BORDER="0" WIDTH="125" HEIGHT="38"
 				SRC="buttons/up/hmhb.gif" NAME="hmhb"></A></P></TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
-			 <P ALIGN="center"><A HREF="https://outlook.office365.com"
-				ONMOUSEOVER="return MouseOver('nplmail','down_nplmail')"
-				ONMOUSEOUT="MouseOut('nplmail','up_nplmail')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="44" SRC="buttons/up/nplmail.gif" NAME="nplmail"
-				ALT="To access NPL e-mail"></A></P> 
 			 <P ALIGN="center"><A
 				HREF="https://mail.virginmedia.com/appsuite/#!!&app=io.ox/mail&folder=default0/INBOX"
 				ONMOUSEOVER="return MouseOver('webmail','down_webmail')"
@@ -622,7 +611,19 @@ document.images[imageID].src = eval(objectName + ".src");
 			 <P ALIGN="center"><A HREF="http://www.youtube.com/"
 				ONMOUSEOVER="return MouseOver('youtube','down_youtube')"
 				ONMOUSEOUT="MouseOut('youtube','up_youtube')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="38" SRC="buttons/up/youtube.gif" NAME="youtube"></A></P> </TD> 
+				HEIGHT="38" SRC="buttons/up/youtube.gif" NAME="youtube"></A></P>
+			 <P ALIGN="center"><A HREF="http://www.theguardian.com/crosswords"
+				ONMOUSEOVER="return MouseOver('xwords','down_xwords')"
+				ONMOUSEOUT="MouseOut('xwords','up_xwords')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="60" SRC="buttons/up/xwords.gif" NAME="xwords"></A></P> 
+			 <P ALIGN="center"><A HREF="http://fifteensquared.net/"
+				ONMOUSEOVER="return MouseOver('fifteen','down_fifteen')"
+				ONMOUSEOUT="MouseOut('fifteen','up_fifteen')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="38" SRC="buttons/up/fifteen.gif" NAME="fifteen"></A></P>				
+			 <P ALIGN="center"><A HREF="https://www.crosswordsolver.org/forum/"
+				ONMOUSEOVER="return MouseOver('solver','down_solver')"
+				ONMOUSEOUT="MouseOut('solver','up_solver')"><IMG HEIGHT="38"
+				SRC="buttons/up/solver.gif" WIDTH="125" BORDER="0" NAME="solver"></A></P></TD> 
 		</TR> 
 	 </TABLE> </BODY>
 </HTML>
