--- a/bwindex.html
+++ b/bwindex.html
@@ -24,6 +24,11 @@ up_amex.src="buttons/up/bw/amex.gif";
 down_amex=new Image();
 down_amex.src="buttons/down/amex.gif";
 
+up_timescc=new Image();
+up_timescc.src="buttons/up/bw/timescc.gif";
+down_timescc=new Image();
+down_timescc.src="buttons/down/timescc.gif";
+
 up_iplayer=new Image();
 up_iplayer.src="buttons/up/bw/iplayer.gif";
 down_iplayer=new Image();
@@ -611,6 +616,10 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('youtube','down_youtube')"
 				ONMOUSEOUT="MouseOut('youtube','up_youtube')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="38" SRC="buttons/up/bw/youtube.gif" NAME="youtube"></A></P>
+			 <P ALIGN="center"><A HREF="https://www.thetimes.co.uk/puzzleclub/crosswordclub/"
+				ONMOUSEOVER="return MouseOver('timescc','down_timescc')"
+				ONMOUSEOUT="MouseOut('timescc','up_timescc')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="38" SRC="buttons/up/bw/timescc.gif" NAME="timescc"></A></P> 
 			 <P ALIGN="center"><A HREF="http://www.theguardian.com/crosswords"
 				ONMOUSEOVER="return MouseOver('xwords','down_xwords')"
 				ONMOUSEOUT="MouseOut('xwords','up_xwords')"><IMG BORDER="0" WIDTH="125"
