--- a/bwindex.html
+++ b/bwindex.html
@@ -24,6 +24,21 @@ up_amex.src="buttons/up/bw/amex.gif";
 down_amex=new Image();
 down_amex.src="buttons/down/amex.gif";
 
+up_fantasy=new Image();
+up_fantasy.src="buttons/up/bw/fantasy.gif";
+down_fantasy=new Image();
+down_fantasy.src="buttons/down/fantasy.gif";
+
+up_github=new Image();
+up_github.src="buttons/up/bw/github.gif";
+down_github=new Image();
+down_github.src="buttons/down/github.gif";
+
+up_whatsapp=new Image();
+up_whatsapp.src="buttons/up/bw/whatsapp.gif";
+down_whatsapp=new Image();
+down_whatsapp.src="buttons/down/whatsapp.gif";
+
 up_timescc=new Image();
 up_timescc.src="buttons/up/bw/timescc.gif";
 down_timescc=new Image();
@@ -403,7 +418,11 @@ document.images[imageID].src = eval(objectName + ".src");
 			 <P ALIGN="center"><A HREF="http://www.private-eye.co.uk"
 				ONMOUSEOVER="return MouseOver('priveye','down_priveye')"
 				ONMOUSEOUT="MouseOut('priveye','up_priveye')"><IMG HEIGHT="38"
-				SRC="buttons/up/bw/priveye.gif" WIDTH="125" BORDER="0" NAME="priveye"></A></P></TD> 
+				SRC="buttons/up/bw/priveye.gif" WIDTH="125" BORDER="0" NAME="priveye"></A></P>
+			 <P ALIGN="center"><A HREF="gallery2.html"
+				ONMOUSEOVER="return MouseOver('gallery','down_gallery')"
+				ONMOUSEOUT="MouseOut('gallery','up_gallery')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="38" SRC="buttons/up/bw/gallery.gif" NAME="gallery"></A></P></TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
 			 <P ALIGN="center"><A HREF="http://www.bikeradar.com"
 				ONMOUSEOVER="return MouseOver('bikeradar','down_bikeradar')"
@@ -418,10 +437,10 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('cricinfo','down_cricinfo')"
 				ONMOUSEOUT="MouseOut('cricinfo','up_cricinfo')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="38" SRC="buttons/up/bw/cricinfo.gif" NAME="cricinfo"></A></P> 
-			 <P ALIGN="center"><A HREF="http://www.evanscycles.com/"
-				ONMOUSEOVER="return MouseOver('evans','down_evans')"
-				ONMOUSEOUT="MouseOut('evans','up_evans')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="38" SRC="buttons/up/bw/evans.gif" NAME="evans"></A></P> 
+			 <P ALIGN="center"><A HREF="https://fantasy.premierleague.com/my-team"
+				ONMOUSEOVER="return MouseOver('fantasy','down_fantasy')"
+				ONMOUSEOUT="MouseOut('fantasy','up_fantasy')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="38" SRC="buttons/up/bw/fantasy.gif" NAME="fantasy"></A></P> 
 			 <P ALIGN="center"><A HREF="https://www.parkrun.org.uk/bushy/parkrunner/7108395/"
 				ONMOUSEOVER="return MouseOver('parkrun','down_parkrun')"
 				ONMOUSEOUT="MouseOut('parkrun','up_parkrun')"><IMG
@@ -431,15 +450,19 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('sportstracker','down_sportstracker')"
 				ONMOUSEOUT="MouseOut('sportstracker','up_sportstracker')"><IMG
 				BORDER="0" WIDTH="125" SRC="buttons/up/bw/sportstracker.gif" NAME="sportstracker"
-				HEIGHT="38"></A></P> 
-			 <P ALIGN="center"><A HREF="http://www.wiggle.co.uk"
-				ONMOUSEOVER="return MouseOver('wiggle','down_wiggle')"
-				ONMOUSEOUT="MouseOut('wiggle','up_wiggle')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="38" SRC="buttons/up/bw/wiggle.gif" NAME="wiggle"></A></P>
-			 <P ALIGN="center"><A HREF="http://en.wikipedia.org"
-				ONMOUSEOVER="return MouseOver('wiki','down_wiki')"
-				ONMOUSEOUT="MouseOut('wiki','up_wiki')"><IMG BORDER="0" WIDTH="125"
-				SRC="buttons/up/bw/wiki.gif" NAME="wiki" HEIGHT="38"></A></P></TD> 
+				HEIGHT="38"></A></P>
+			 <P ALIGN="center"><A HREF="http://www.bobdylan.com/"
+				ONMOUSEOVER="return MouseOver('dylan','down_dylan')"
+				ONMOUSEOUT="MouseOut('dylan','up_dylan')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="38" SRC="buttons/up/bw/dylan.gif" NAME="dylan"></A></P> 
+			 <P ALIGN="center"><A HREF="http://www.hmhb.co.uk/"
+				ONMOUSEOVER="return MouseOver('hmhb','down_hmhb')"
+				ONMOUSEOUT="MouseOut('hmhb','up_hmhb')"><IMG BORDER="0" WIDTH="125" HEIGHT="38"
+				SRC="buttons/up/bw/hmhb.gif" NAME="hmhb"></A></P>
+			 <P ALIGN="center"><A HREF="qphotosupps.html"
+				ONMOUSEOVER="return MouseOver('qphotos','down_qphotos')"
+				ONMOUSEOUT="MouseOut('qphotos','up_qphotos')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="38" SRC="buttons/up/bw/qphotos.gif" NAME="qphotos"></A></P></TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
 			 <P ALIGN="center"><A HREF="http://www.google.co.uk/"
 				ONMOUSEOVER="return MouseOver('google','down_google')"
@@ -475,7 +498,11 @@ document.images[imageID].src = eval(objectName + ".src");
 			<P ALIGN="center"><A HREF="http://www.onelook.com/"
 				ONMOUSEOVER="return MouseOver('onelook','down_onelook')"
 				ONMOUSEOUT="MouseOut('onelook','up_onelook')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="38" SRC="buttons/up/bw/onelook.gif" NAME="onelook"></A></P></TD> 
+				HEIGHT="38" SRC="buttons/up/bw/onelook.gif" NAME="onelook"></A></P>
+			 <P ALIGN="center"><A HREF="http://en.wikipedia.org"
+				ONMOUSEOVER="return MouseOver('wiki','down_wiki')"
+				ONMOUSEOUT="MouseOut('wiki','up_wiki')"><IMG BORDER="0" WIDTH="125"
+				SRC="buttons/up/bw/wiki.gif" NAME="wiki" HEIGHT="38"></A></P></TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
 			 <P ALIGN="center"><A
 				HREF="https://login.iso.org/portal/"
@@ -527,6 +554,10 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('ebay','down_ebay')"
 				ONMOUSEOUT="MouseOut('ebay','up_ebay')"><IMG BORDER="0" WIDTH="125" HEIGHT="38"
 				SRC="buttons/up/bw/ebay.gif" NAME="ebay"></A></P> 
+			 <P ALIGN="center"><A HREF="http://www.evanscycles.com/"
+				ONMOUSEOVER="return MouseOver('evans','down_evans')"
+				ONMOUSEOUT="MouseOut('evans','up_evans')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="38" SRC="buttons/up/bw/evans.gif" NAME="evans"></A></P> 
 			 <P ALIGN="center"><A HREF="https://www.nespresso.com/uk/en/"
 				ONMOUSEOVER="return MouseOver('nespresso','down_nespresso')"
 				ONMOUSEOUT="MouseOut('nespresso','up_nespresso')"><IMG BORDER="0" WIDTH="125"
@@ -539,6 +570,10 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('opodo','down_opodo')"
 				ONMOUSEOUT="MouseOut('opodo','up_opodo')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="38" SRC="buttons/up/bw/opodo.gif" NAME="opodo"></A></P>
+			 <P ALIGN="center"><A HREF="http://www.wiggle.co.uk"
+				ONMOUSEOVER="return MouseOver('wiggle','down_wiggle')"
+				ONMOUSEOUT="MouseOut('wiggle','up_wiggle')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="38" SRC="buttons/up/bw/wiggle.gif" NAME="wiggle"></A></P>
 			 <P ALIGN="CENTER"><A HREF="http://www.thewinesociety.com/"
 				ONMOUSEOVER="return MouseOver('winesoc','down_winesoc')"
 				ONMOUSEOUT="MouseOut('winesoc','up_winesoc')"><IMG BORDER="0" WIDTH="125"
@@ -546,15 +581,7 @@ document.images[imageID].src = eval(objectName + ".src");
 			 <P ALIGN="center"><A HREF="http://www.zoopla.co.uk/"
 				ONMOUSEOVER="return MouseOver('zoopla','down_zoopla')"
 				ONMOUSEOUT="MouseOut('zoopla','up_zoopla')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="38" SRC="buttons/up/bw/zoopla.gif" NAME="zoopla"></A></P> 
-			 <P ALIGN="center"><A HREF="gallery2.html"
-				ONMOUSEOVER="return MouseOver('gallery','down_gallery')"
-				ONMOUSEOUT="MouseOut('gallery','up_gallery')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="38" SRC="buttons/up/bw/gallery.gif" NAME="gallery"></A></P> 
-			 <P ALIGN="center"><A HREF="qphotosupps.html"
-				ONMOUSEOVER="return MouseOver('qphotos','down_qphotos')"
-				ONMOUSEOUT="MouseOut('qphotos','up_qphotos')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="38" SRC="buttons/up/bw/qphotos.gif" NAME="qphotos"></A></P> </TD> 
+				HEIGHT="38" SRC="buttons/up/bw/zoopla.gif" NAME="zoopla"></A></P></TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
 			 <P ALIGN="CENTER"><A HREF="https://www.britishairways.com/travel/echome/execclub/_gf/en_gb?source=MNVEXC3_my_executive_club"
 				ONMOUSEOVER="return MouseOver('ba','down_ba')"
@@ -564,6 +591,10 @@ document.images[imageID].src = eval(objectName + ".src");
 				ONMOUSEOVER="return MouseOver('facebook','down_facebook')"
 				ONMOUSEOUT="MouseOut('facebook','up_facebook')"><IMG BORDER="0" WIDTH="125"
 				HEIGHT="38" SRC="buttons/up/bw/facebook.gif" NAME="facebook"></A></P>
+			 <P ALIGN="CENTER"><A HREF="https://github.com/AndyKnott/website"
+				ONMOUSEOVER="return MouseOver('github','down_github')"
+				ONMOUSEOUT="MouseOut('github','up_github')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="38" SRC="buttons/up/bw/github.gif" NAME="github"></A></P> 
 			 <P ALIGN="CENTER"><A HREF="https://uk.linkedin.com/"
 				ONMOUSEOVER="return MouseOver('linked','down_linked')"
 				ONMOUSEOUT="MouseOut('linked','up_linked')"><IMG BORDER="0" WIDTH="125"
@@ -583,15 +614,10 @@ document.images[imageID].src = eval(objectName + ".src");
 			 <P ALIGN="center"><A HREF="http://www.tumblr.com/dashboard"
 				ONMOUSEOVER="return MouseOver('tumblr','down_tumblr')"
 				ONMOUSEOUT="MouseOut('tumblr','up_tumblr')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="38" SRC="buttons/up/bw/tumblr.gif" NAME="tumblr"></A></P> 
-			 <P ALIGN="center"><A HREF="http://www.bobdylan.com/"
-				ONMOUSEOVER="return MouseOver('dylan','down_dylan')"
-				ONMOUSEOUT="MouseOut('dylan','up_dylan')"><IMG BORDER="0" WIDTH="125"
-				HEIGHT="38" SRC="buttons/up/bw/dylan.gif" NAME="dylan"></A></P> 
-			 <P ALIGN="center"><A HREF="http://www.hmhb.co.uk/"
-				ONMOUSEOVER="return MouseOver('hmhb','down_hmhb')"
-				ONMOUSEOUT="MouseOut('hmhb','up_hmhb')"><IMG BORDER="0" WIDTH="125" HEIGHT="38"
-				SRC="buttons/up/bw/hmhb.gif" NAME="hmhb"></A></P></TD> 
+				HEIGHT="38" SRC="buttons/up/bw/tumblr.gif" NAME="tumblr"></A></P> 			 			 	 <P ALIGN="center"><A HREF="https://web.whatsapp.com/"
+				ONMOUSEOVER="return MouseOver('whatsapp','down_whatsapp')"
+				ONMOUSEOUT="MouseOut('whatsapp','up_whatsapp')"><IMG BORDER="0" WIDTH="125"
+				HEIGHT="38" SRC="buttons/up/bw/whatsapp.gif" NAME="whatsapp"></A></P> </TD> 
 		  <TD VALIGN="TOP" ALIGN="CENTER" BGCOLOR="#EEEEEE"> 
 			 <P ALIGN="center"><A
 				HREF="https://mail.virginmedia.com/appsuite/#!!&app=io.ox/mail&folder=default0/INBOX"
